--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Post -%>
+            
 <div class="page-header">
   <h1><%=t '.title', :default => Post %></h1>
 </div>
@@ -13,8 +14,8 @@
       <th><%= model_class.human_attribute_name(:date) %></th>
       <th><%= model_class.human_attribute_name(:phone_number) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
+      <th><%=t '.actions', :default => t("helpers.actions") %>      </th>
+      </tr>
   </thead>
   <tbody>
     <% @posts.each do |post| %>
@@ -33,7 +34,7 @@
             <%= glyph 'pencil' %>
           <%- end -%>
           <%= link_to post_path(post), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs', :title => "#{ t('.destroy', :default => t('helpers.links.destroy')) }" do %>
-            <%= glyph 'remove' %>
+            <%= glyph 'remove-circle' %>
           <%- end -%>
         </td>
       </tr>
